fix: now gameboard does not overlap the function block

--- a/src/css/gameBoard.css
+++ b/src/css/gameBoard.css
@@ -27,6 +27,7 @@ body {
 
 .game-board {
   width: 100%;
+  height: 80vh;
   margin: 5px auto;
 }
 
